2006-04-20  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Save solution
	preferences in the actual solution directory instead of in
	.config/MonoDevelop/CombinePreferences. Fixed bug #78036.

2006-04-19 Andrés G. Aragoneses  <knocte@gmail.com>

	* Base.glade: improved string.

2006-04-19 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs: When
	  adding files to a project, don't save the project until
	  all files have been added. Also show a progress monitor
	  when adding many files.

2006-04-19 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Fixed crash after
	  renaming a folder (bug #78134).

2006-04-18 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs:
	* MonoDevelop.Ide.Gui/ProgressMonitors.cs: Added strings to l10n.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Fixed typo.

2006-04-18 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  If the template provides a file name with extension, don't
	  replace it. Fixes bug #78040.

2006-04-18 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Don't create the
	  splash window in the static initializer, since it may be created
	  before GTK is initialized.

2006-04-18 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/BrowserDisplayBinding.cs:
	  Fix null ref exception in Ubuntu. Fix by Sebastian Dröge.

2006-04-17  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* Base.glade: Fixed typo.

2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.Ide.Commands/FileCommands.cs: Added filtering in File dialog
	* MonoDevelop.Ide.addin.xml: renamed attribute in FileFilter Extension

2006-04-07 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Codons/NodeBuilderCodon.cs: